# crosspoint-reader

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PLAN.md  README.md  TODO.md  USER_GUIDE.md  device.md  obsidian.md  platformio-custom.ini  platformio.ini  pyproject.toml
.pio-size-lean/: project.checksum
.pio-size-md/: project.checksum
.pio-size-nomd/: project.checksum
.skills/: SKILL.md
docs/: AGENT_INVOCATION_TUNING.md  BUILD_CONFIGURATION.md  FEATURE_PICKER_TEST_PLAN.md  INTEGRATION_PLAN.md  MODULAR_ARCHITECTURE_GUIDE.md  android-app-contract.md  comparison.md  core-feature-api.md  fork-strategy.md  http-api.openapi.yaml  index.html  webserver-endpoints.md
include/: FeatureFlags.h  FsFileGuard.h  ScopedBuffer.h  SpiBusMutex.h
scripts/: apply_feature_sizes.py  build_html.py  check_feature_boundaries.sh  check_feature_key_sync.py  check_flash_headroom.py  check_hardware_patterns.py  contract_server.py  create_atomic_commits.sh  crosspoint-todo-sync.sh  crosspoint_sync.py  gen_i18n.py  gen_version.py  generate_build_config.py  measure_feature_sizes.py  run_agent_task.sh  run_claude_task.sh  run_gemini_task.sh  test_all_combinations.sh  validate_contract_server.py  validate_custom_config.py
src/: CrossPointSettings.cpp  CrossPointSettings.h  CrossPointState.cpp  CrossPointState.h  FeatureManifest.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  RecentBooksStore.cpp  ScreenComponents.cpp  ScreenComponents.h  SettingsList.h  SpiBusMutex.cpp  SpiBusMutex.h  UsbSerialProtocol.cpp  UsbSerialProtocol.h  UserFontManager.cpp  (+4 more)
(+1162 files in other folders)
